--- a/base_external/package/aesd-assignments/aesd-assignments.mk.save.1
+++ b/base_external/package/aesd-assignments/aesd-assignments.mk.save.1
@@ -22,7 +22,7 @@ endef
 define AESD_ASSIGNMENTS_INSTALL_TARGET_CMDS
 	$(INSTALL) -d 0755 $(@D)/conf/ $(TARGET_DIR)/etc/finder-app/conf/
 	$(INSTALL) -m 0755 $(@D)/conf/* $(TARGET_DIR)/etc/finder-app/conf/
-	#$(INSTALL) -m 0755 $(@D)/assignment-autotest/test/assignment4/* $(TARGET_DIR)/bin
+	t4/* $(TARGET_DIR)/bin
 endef
 
 $(eval $(generic-package))
